Fix the images display

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="secondary-text">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
                 <button class="header-button">Sign Up</button>
             </div>
-            <img src="/images/joey-banks-YApiWyp0lqo-unsplash.jpg" class="photo-top">
+            <img src="./images/joey-banks-YApiWyp0lqo-unsplash.jpg" class="photo-top">
         </div>
     </div>
     
@@ -29,19 +29,19 @@
         <div class="container-title">Some random information</div>
             <div class="container-info">
                 <div class="info">
-                    <img src="/images/test.jpg" class="photo">
+                    <img src="./images/test.jpg" class="photo">
                     <div class="text">This is a type of plant. We love this one.</div>
                 </div>
                 <div class="info">
-                    <img src="/images/test.jpg" class="photo">
+                    <img src="./images/test.jpg" class="photo">
                     <div class="text">This is a type of plant. We love this one.</div>
                 </div>
                 <div class="info">
-                    <img src="/images/test.jpg" class="photo">
+                    <img src="./images/test.jpg" class="photo">
                     <div class="text">This is a type of plant. We love this one.</div>
                 </div>
                 <div class="info">
-                    <img src="/images/test.jpg" class="photo">
+                    <img src="./images/test.jpg" class="photo">
                     <div class="text">This is a type of plant. We love this one.</div>
                 </div>
             </div>
